src/main/java/sample/dependency/Inversion/bad/ApplicationProgram.java
package sample.dependency.Inversion.bad;

/**
 * 
 * Distibution under GNU GENERAL PUBLIC LICENSE Version 2, June 1991
 * 
 * @author dmalalan
 * @created Apr 12, 2016 2:48:43 PM
 * 
 * @blog https://malalanayake.wordpress.com/
 */
public class ApplicationProgram {
 public void run() {
	System.out.println("[RUN:Application]");
 }
}
